--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-highlight-words": "^0.18.0"
-  },
-  "devDependencies": {
+    "react-highlight-words": "^0.18.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "devDependencies": {}
 }
