--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "@next/font": "13.0.7",
+    "@heroicons/react": "^2.0.16",
+    "@next/font": "^13.1.6",
     "antd": "^5.1.0",
     "antd-input-tag": "^1.0.14",
     "autoprefixer": "^10.4.13",
@@ -30,7 +31,10 @@
     "react-highlight-words": "^0.18.0",
     "react-quill": "^2.0.0",
     "react-scrollbar": "^0.5.6",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    
+  }
 }
