--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
+    "react-pdfobject": "^1.2.0",
     "react-quill": "^2.0.0",
     "react-scrollbar": "^0.5.6",
     "tailwindcss": "^3.2.4",
     "uuid": "^9.0.0"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
