--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
+    "react-pdf-tailwind": "^2.1.0",
     "react-quill": "^2.0.0",
     "react-scrollbar": "^0.5.6",
     "sharp": "^0.31.3",
